--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
             <a href="#categories">الاصناف</a>
             <a href="#products">المنتجات</a>
             <a href="#contact">التواصل</a>
-            <!-- <a href="" style="display: inline-block;  position: absolute; padding: 0%; margin: 0%;">
-                <i class="material-icons world">settings</i>
-            </a> -->
         </nav>
     </header>
 
@@ -54,10 +51,10 @@
     </section>
 
 
-    <div class="seprated" style="height: 30px;"></div>
+    <!-- <div class="seprated" style="height: 30px;"></div> -->
 
     <!-- My code -->
-    <div class="all-categories" id="categories">
+    <div class="all-categories" id="categories" style="padding-top: 90px;">
         <div style="margin: auto; width: 100px; color: #000; font-size: 22px; font-weight: bold;">الاصناف</div>
         <div class="seprated" style="height: 15px;"></div>
         <div class="categories">
@@ -108,7 +105,7 @@
         </div>
     </div>
 
-    <div class="all-products" id="products">
+    <div class="all-products" id="products" style="padding-top: 90px;">
         <div class="seprated" style="height: 25px;"></div>
         <div style="margin: auto; width: 100px; color: #fff; font-size: 22px; font-weight: bold;">المنتجات</div>
         <div class="seprated" style="height: 15px;"></div>
@@ -156,11 +153,10 @@
     </div>
     <!-- End My Code -->
 
-    <section class="cards contact" id="contact">
-        <div class="separated" style="width: 100%; height: 60px;"></div>
+    <section class="cards contact" id="contact" style="padding-top: 90px; padding-bottom: 40px;">
         <h2 class="title">وسائل التواصل الاجتماعي</h2>
         <div class="content">
-            <a href="sms:+967770442646?body=مرحبا!" target="blank">
+            <a href="tel:+967770442646" target="blank">
                 <div class="card">
                     <div class="icon">
                         <i class="fas fa-phone"></i>
@@ -183,7 +179,7 @@
                 </div>
             </a>
         </div>
-        <div class="separated" style="width: 100%; height: 30px;"></div>
+        
 
     </section>
 
